--- a/thingslink-auth/thingslink-auth-biz/src/main/resources/i18n/auth_zh_CN.properties
+++ b/thingslink-auth/thingslink-auth-biz/src/main/resources/i18n/auth_zh_CN.properties
@@ -4,7 +4,6 @@ oauth2.scope.invalid=请求的scope无效、未知、格式错误或超出范围
 oauth2.unsupport.granttype=不支持此授权类型
 oauth2.unsupport.tokentype=不支持此token类型
 oauth2.unsupport.responsetype=不支持此response类型
-oauth2.parameter.missing=请求参数缺失：{0}
 oauth2.account.disabled=账号被禁用
 oauth2.passlogin.fail=登录失败，用户名或密码错误
-oauth2.smslogin.fail=登录失败，手机号验证码错误
+oauth2.smslogin.fail=登录失败，手机号或验证码错误
