--- a/thingslink-common/thingslink-common-core/src/main/resources/i18n/common_zh_CN.properties
+++ b/thingslink-common/thingslink-common-core/src/main/resources/i18n/common_zh_CN.properties
@@ -26,7 +26,7 @@ business.duplicate.key=操作失败，无法添加重复数据
 # 请求信息
 request.inner.forbid=没有内部访问权限，不允许访问
 request.forbid=权限不足, 不允许访问
-request.param.error=请求数据异常或不存在
+request.param.error=请求参数异常或不存在
 request.media.error=不支持此媒体类型
 
 # 自定义validate
