修复验证码

--- a/wzkris-common/wzkris-common-core/src/main/resources/i18n/common.properties
+++ b/wzkris-common/wzkris-common-core/src/main/resources/i18n/common.properties
@@ -2,6 +2,7 @@
 captcha.error=验证码错误
 captcha.expired=验证码已失效
 captcha.notnull=验证码必须填写
+captcha.type.unsupport=不支持此验证码类型
 frequent.retry=重试次数频繁，请稍后再试
 # 文件信息
 file.name.length.exceed=文件名长度超过限制长度{0}
