补充异常翻译

--- a/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth_en_US.properties
+++ b/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth_en_US.properties
@@ -1,6 +1,6 @@
 # OAuth2信息
 oauth2.client.invalid=Client authentication failed, unknown client, no client authentication included, or unsupported authentication method
-oauth2.scope.invalid=The requested scope is invalid, unknown, malformed or exceeds the scope
+oauth2.scope.invalid=The requested scope is invalid, unknown, malformed or exceeds the scope granted by the resource owner.
 oauth2.unsupport.granttype=The authorization grant type is not supported
 oauth2.unsupport.tokentype=The token type is not supported
 oauth2.unsupport.responsetype=The response type is not supported
