调整一些功能细节

--- a/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth_en_US.properties
+++ b/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth_en_US.properties
@@ -4,6 +4,9 @@ oauth2.scope.invalid=The requested scope is invalid, unknown, malformed or excee
 oauth2.unsupport.granttype=The authorization grant type is not supported
 oauth2.unsupport.tokentype=The token type is not supported
 oauth2.unsupport.responsetype=The response type is not supported
-oauth2.account.disabled=Account is disabled
+oauth2.account.disabled=Account is disabled, please contact administrator
+oauth2.tenant.disabled=Merchants are disabled, please contact administrator
+oauth2.tenant.expired=Merchant has expired, please contact administrator
+oauth2.package.disabled=Merchant packages are disabled, please contact administrator
 oauth2.passlogin.fail=Login failed, user does not exist or password error
 oauth2.smslogin.fail=Login failed, mobile phone number verification code error
