--- a/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth.properties
+++ b/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth.properties
@@ -4,6 +4,9 @@ oauth2.scope.invalid=请求的scope无效、未知、格式错误或超出授权
 oauth2.unsupport.granttype=不支持此授权类型
 oauth2.unsupport.tokentype=不支持此token类型
 oauth2.unsupport.responsetype=不支持此response类型
-oauth2.account.disabled=账号被禁用
+oauth2.account.disabled=账号被禁用，请联系管理员
+oauth2.tenant.disabled=商户被禁用，请联系管理员
+oauth2.tenant.expired=商户已过期，请联系管理员
+oauth2.package.disabled=商户套餐被禁用，请联系管理员
 oauth2.passlogin.fail=登录失败，用户名或密码错误
 oauth2.smslogin.fail=登录失败，手机号或验证码错误
