优化降级后返回的状态码

--- a/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_en_US.properties
+++ b/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_en_US.properties
@@ -4,6 +4,7 @@ captcha.expired=Captcha has expired
 captcha.notnull=Captcha must be filled in
 captcha.type.unsupport=This verification code type is not supported
 frequent.retry=Frequent retries, please try again later
+service.busy=Service busy, please try again later
 # 文件信息
 file.name.length.exceed=File name length exceeds limit length {0}
 file.not.exist=File {0} not exist
