--- a/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_zh_CN.properties
+++ b/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_zh_CN.properties
@@ -4,6 +4,7 @@ captcha.expired=验证码已失效
 captcha.notnull=验证码必须填写
 captcha.type.unsupport=不支持此验证码类型
 frequent.retry=重试次数频繁，请稍后再试
+service.busy=服务繁忙，请稍后再试
 # 文件信息
 file.name.length.exceed=文件名长度超过限制长度{0}
 file.not.exist=文件{0}不存在
