支持微信登录

--- a/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth_en_US.properties
+++ b/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth_en_US.properties
@@ -10,3 +10,4 @@ oauth2.tenant.expired=Merchant has expired, please contact administrator
 oauth2.package.disabled=Merchant packages are disabled, please contact administrator
 oauth2.passlogin.fail=Login failed, user does not exist or password error
 oauth2.smslogin.fail=Login failed, mobile phone number verification code error
+oauth2.wxlogin.fail=WeChat login failed
