--- a/wzkris-common/wzkris-common-core/src/main/resources/i18n/common.properties
+++ b/wzkris-common/wzkris-common-core/src/main/resources/i18n/common.properties
@@ -34,6 +34,8 @@ validate.size.illegal=长度必须要在{min}到{max}之间
 # 服务异常
 service.unavailable=服务不可用
 #通用描述
+desc.user=用户
+desc.username=用户名
 desc.name=名称
 desc.system=系统
 desc.key=键名
@@ -49,3 +51,7 @@ desc.oldpwd=旧密码
 desc.newpwd=新密码
 desc.status=状态
 desc.error=错误
+desc.or=或
+desc.and=和
+desc.not=不
+desc.exist=存在
