--- a/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_en_US.properties
+++ b/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_en_US.properties
@@ -34,6 +34,8 @@ validate.size.illegal=length must be between {min} and {max}
 # 服务异常
 service.unavailable=Service Unavailable
 #通用描述，后面必须跟空格
+desc.user=user 
+desc.username=username 
 desc.name=name 
 desc.system=system 
 desc.key=key 
@@ -49,3 +51,7 @@ desc.oldpwd=old password
 desc.newpwd=new password 
 desc.status=status 
 desc.error=error 
+desc.or=or 
+desc.and=and 
+desc.not=not 
+desc.exist=exist 
