--- a/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth_zh_CN.properties
+++ b/wzkris-auth/wzkris-auth-biz/src/main/resources/i18n/auth_zh_CN.properties
@@ -10,3 +10,4 @@ oauth2.tenant.expired=商户已过期，请联系管理员
 oauth2.package.disabled=商户套餐被禁用，请联系管理员
 oauth2.passlogin.fail=登录失败，用户名或密码错误
 oauth2.smslogin.fail=登录失败，手机号或验证码错误
+oauth2.wxlogin.fail=微信登录失败
