优化添加用户逻辑 优化添加租户逻辑 优化日志切面

--- a/wzkris-common/wzkris-common-core/src/main/resources/i18n/common.properties
+++ b/wzkris-common/wzkris-common-core/src/main/resources/i18n/common.properties
@@ -35,6 +35,8 @@ validate.size.illegal=长度必须要在{min}到{max}之间
 service.unavailable=服务不可用
 #通用描述
 desc.user=用户
+desc.login=登录
+desc.oper=操作
 desc.username=用户名
 desc.name=名称
 desc.system=系统
