--- a/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_en_US.properties
+++ b/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_en_US.properties
@@ -35,6 +35,8 @@ validate.size.illegal=length must be between {min} and {max}
 service.unavailable=Service Unavailable
 #通用描述，后面必须跟空格
 desc.user=user 
+desc.login=login 
+desc.oper=operate 
 desc.username=username 
 desc.name=name 
 desc.system=system 
