--- a/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_zh_CN.properties
+++ b/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_zh_CN.properties
@@ -8,7 +8,7 @@ user.not.login=用户未登录
 # 工具信息
 util.json.error=json序列化错误
 # 自定义业务信息
-business.allocated=操作失败，正在使用中
+business.allocated=操作失败，该数据已分配
 business.disabled=操作失败，不能操作已停用数据
 business.duplicate.key=操作失败，无法添加重复数据
 # 请求信息
