--- a/wzkris-modules/wzkris-modules-system/wzkris-system-biz/src/main/resources/i18n/system_en_US.properties
+++ b/wzkris-modules/wzkris-modules-system/wzkris-system-biz/src/main/resources/i18n/system_en_US.properties
@@ -1,3 +1,8 @@
-desc.dict=dictionary 
-desc.config=config 
-desc.message=message
+invalidParameter.dictKey.invalid=Dictionary key is illegal
+invalidParameter.dictName.invalid=Dictionary name is illegal
+invalidParameter.dictValue.invalid=Dictionary value is illegal
+invalidParameter.configKey.invalid=Config key is illegal
+invalidParameter.configName.invalid=Config name is illegal
+invalidParameter.configValue.invalid=Config value is illegal
+invalidParameter.configType.invalid=Config type is illegal
+invalidParameter.messageTitle.invalid=The message header is illegal
