--- a/wzkris-modules/wzkris-modules-system/wzkris-system-biz/src/main/resources/i18n/system_zh_CN.properties
+++ b/wzkris-modules/wzkris-modules-system/wzkris-system-biz/src/main/resources/i18n/system_zh_CN.properties
@@ -1,3 +1,8 @@
-desc.dict=字典
-desc.config=配置
-desc.message=消息
+invalidParameter.dictKey.invalid=字典键不合法
+invalidParameter.dictName.invalid=字典名称不合法
+invalidParameter.dictValue.invalid=字典键值不合法
+invalidParameter.configKey.invalid=配置键不合法
+invalidParameter.configName.invalid=配置名称不合法
+invalidParameter.configValue.invalid=配置键值不合法
+invalidParameter.configType.invalid=配置类型不合法
+invalidParameter.messageTitle.invalid=消息标题不合法
