--- a/wzkris-modules/wzkris-modules-user/wzkris-user-biz/src/main/resources/i18n/user_zh_CN.properties
+++ b/wzkris-modules/wzkris-modules-user/wzkris-user-biz/src/main/resources/i18n/user_zh_CN.properties
@@ -1,10 +1,9 @@
-desc.user=用户
-desc.gender=性别
-desc.tenant=租户
-desc.package=套餐
-desc.dept=部门
-desc.menu=菜单
-desc.post=岗位
-desc.role=角色
-desc.client=客户端
-desc.expireTime=过期时间
+invalidParameter.tenantType.invalid=租户类型不合法
+invalidParameter.tenantName.invalid=租户名称不合法
+invalidParameter.packageName.invalid=套餐名称不合法
+invalidParameter.deptName.invalid=部门名称不合法
+invalidParameter.menuName.invalid=菜单名称不合法
+invalidParameter.menuType.invalid=菜单类型不合法
+invalidParameter.roleName.invalid=角色名称不合法
+invalidParameter.clientName.invalid=客户端名称不合法
+invalidParameter.expireTime.invalid=过期时间参数不合法
