--- a/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_zh_CN.properties
+++ b/wzkris-common/wzkris-common-core/src/main/resources/i18n/common_zh_CN.properties
@@ -1,10 +1,11 @@
-frequent.retry=重试次数频繁，请稍后再试
-service.busy=服务繁忙，请稍后再试
+# 服务信息
+service.internalError.busy=服务繁忙，请稍后再试
+service.internalError.error=服务异常
 # 工具信息
 utilError.jsonSerialize.error=json序列化错误
 # 请求信息
-forbidden.accessDenied.tokenExpired=用户未登录
-forbidden.accessDenied.permissionDenied=权限不足, 不允许访问
+forbidden.accessDenied.tokenExpired=未认证或认证已过期
+forbidden.accessDenied.permissionDenied=权限不足
 # 非法参数信息
 invalidParameter.captcha.error=验证码错误或已失效
 invalidParameter.param.invalid=参数不合法
